--- a/public/style.css
+++ b/public/style.css
@@ -32,6 +32,7 @@ header h1.main-title {
     color: var(--primary-color);
     text-transform: uppercase;
     letter-spacing: 2px;
+    text-align: center;
 }
 
 header h2 {
@@ -39,6 +40,7 @@ header h2 {
     color: #4b5563;
     margin-top: 0;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .logo-container {
@@ -47,7 +49,7 @@ header h2 {
 }
 
 .logo {
-    max-width: 150px;
+    max-width: 300px;
     height: auto;
     border-radius: var(--border-radius);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
